Fixed overflow problem.

--- a/app/assets/styles/modules/_primary-nav.css
+++ b/app/assets/styles/modules/_primary-nav.css
@@ -1,5 +1,6 @@
 .primary-nav {
   padding-top: 10px;
+  overflow: hidden;
 
   @mixin atMedium {
     padding-top: 0;
