--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -7,6 +7,7 @@
   z-index: 9;
   font-family: "Raleway";
   text-decoration: none;
+  overflow: hidden;
 
   &--visible {
     opacity: 1;
